fix build.gradle
1) better plugins (lombok, errorprone, sonarlint)
2) enable errorprone, but not for tests and javadoc Summary
3) remove very old velocity:velocity:1.3 from .war
4) new lombok settings
5) sonarLint settings