@@ -2,8 +2,10 @@ plugins {
   id 'java-library'
   id 'idea'
   id 'maven-publish'
-  id 'net.ltgt.errorprone' version 'latest.release'
-  id 'io.franzbecker.gradle-lombok' version 'latest.release'
+
+  id("io.freefair.lombok")   version "latest.release" // id 'io.franzbecker.gradle-lombok' version 'latest.release'
+  id("name.remal.sonarlint") version "latest.release" // https://github.com/remal-gradle-plugins/sonarlint + https://lift.sonatype.com/
+  id("net.ltgt.errorprone")  version "latest.release" // https://errorprone.info/
 }
 
 repositories {
@@ -25,10 +27,10 @@ tasks.withType(JavaCompile).configureEach {
   options.deprecation = false // todo step2: deprecated
 
   options.errorprone {
-    enabled = false
+    enabled = true
     disableWarningsInGeneratedCode = true
-    excludedPaths = ".*/build/gen.*/.*"
-    //disable("ParameterName") disable("UnusedVariable") errorproneArgs = ["--illegal-access=warn"]
+    excludedPaths = ".*/(build/gen|test).*/.*"
+    disable("MissingSummary")
   }
 }
 
@@ -83,6 +85,16 @@ dependencies {
   testImplementation project(':click-velocity')
 }
 
+configurations {
+  all*.exclude group: "velocity", module: "velocity" // 1.3 they come from somewhere..
+  all*.exclude group: "commons-logging", module: "commons-logging"
+}
+// https://tomgregory.com/how-to-exclude-gradle-dependencies/
+configurations.all { // .implementation
+  exclude group: 'velocity', module: 'velocity'
+}
+
+
 idea {
   module {
     downloadJavadoc = true
@@ -105,5 +117,7 @@ test {
 
 lombok {
   version = "latest.release"
-  sha256 = "" // don't verify lombok.jar
+}
+sonarLint {
+  ignoreFailures = true
 }
