@@ -7,7 +7,9 @@ plugins {
   // https://github.com/bmuschko/gradle-tomcat-plugin
   id "com.bmuschko.tomcat" version "latest.release"
 
-  id 'io.franzbecker.gradle-lombok' version 'latest.release'
+  id("io.freefair.lombok")   version "latest.release" // id 'io.franzbecker.gradle-lombok' version 'latest.release'
+  id("name.remal.sonarlint") version "latest.release" // https://github.com/remal-gradle-plugins/sonarlint + https://lift.sonatype.com/
+  id("net.ltgt.errorprone")  version "latest.release" // https://errorprone.info/
 }
 
 repositories {
@@ -29,10 +31,21 @@ tasks.withType(JavaCompile).configureEach {
   options.encoding = 'UTF-8'
   options.compilerArgs.addAll(['-Xlint:all', '-parameters', '-g', '-Xmaxwarns', '999'])
   options.release.set(17) // javac --release 7..18+
-  options.deprecation = false // todo step2 deprecated...
+  options.deprecation = false // todo step2: deprecated
+
+  options.errorprone {
+    enabled = true
+    disableWarningsInGeneratedCode = true
+    excludedPaths = ".*/(build/gen|test).*/.*"
+    disable("MissingSummary")
+    disable("ParameterName")
+    disable("UnusedVariable")
+    errorproneArgs = ["--illegal-access=warn"]
+  }
 }
 
 dependencies {
+  errorprone "com.google.errorprone:error_prone_core:latest.release"
   // https://javadoc.io/doc/com.google.errorprone/error_prone_annotations/latest/index.html
   implementation("com.google.errorprone:error_prone_annotations:latest.release")
   // https://javadoc.io/doc/com.google.code.findbugs/jsr305/latest/index.html  [x] remove? jsr305→jsr308 ^ Nope! This is THE WINNER!
@@ -53,6 +66,7 @@ dependencies {
 
   implementation 'org.apache.commons:commons-lang3:3.+'
   implementation 'commons-lang:commons-lang:2.+'
+  implementation 'commons-io:commons-io:2.+'
   implementation 'commons-fileupload:commons-fileupload:1.3.+'
 
   def springVersion = '5.+'
@@ -83,7 +97,7 @@ dependencies {
   // we need to put it in .war
   implementation 'org.slf4j:slf4j-simple:1.7.+'
 
-  // TEST TEST TEST
+  //*** TEST TEST TEST
 
   testImplementation 'junit:junit:4.+'
   testImplementation 'org.mockito:mockito-inline:+'
@@ -97,6 +111,20 @@ dependencies {
       "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}",
       "org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}"
 
+  modules {
+    module('velocity:velocity') {
+      replacedBy 'org.apache.velocity:velocity', 'Use 1.7 instead of 1.3'
+    }
+  }
+}
+
+configurations {
+  all*.exclude group: "velocity", module: "velocity" // 1.3 they come from somewhere..
+  all*.exclude group: "commons-logging", module: "commons-logging"
+}
+// https://tomgregory.com/how-to-exclude-gradle-dependencies/
+configurations.all { // .implementation
+  exclude group: 'velocity', module: 'velocity'
 }
 
 idea {
@@ -121,5 +149,7 @@ test {
 
 lombok {
   version = "latest.release"
-  sha256 = "" // don't verify lombok.jar
+}
+sonarLint {
+  ignoreFailures = true
 }
